syntax = "proto3";

option csharp_namespace = "BookCatalog.APIS.Protos";

package book;

service BookService {
  rpc NotifyNewBook (BookCreatedRequest) returns (BookCreatedResponse);
}

message BookCreatedRequest {
  string book_id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
}

message BookCreatedResponse {
  bool success = 1;
  string message = 2;
}